@@ -3,6 +3,7 @@ X X
     * Add Sword + Fire Protection = return to player when dropped in lava
     * Add Hoe + Power = move time
     * Add Hoe + Bane of Arthropods = toggle downfall
+    * Add Bow + Silk Touch = magnetic arrows (transport nearby entity)
     * Improve Pickaxe/Shovel/Axe + Flame = auto-smelt to drop natural item if unsmeltable
     * Improve Axe + Power = fell tree, now breaks more branches depending on enchantment level
     * Fix not ignoring cancelled events (partial fix for ticket 4)
